# hydromt_uwbm

./: .gitignore  .nojekyll  .pre-commit-config.yaml  LICENSE  README.md  index.html  pyproject.toml  robots.txt  search.json  sonar-project.properties
.github/ISSUE_TEMPLATE/: documentation_improvement.yaml  feature_request.yaml
.github/workflows/: docs.yml  linting.yml  tests.yml
api/: UWBM.html  index.html
contributing/: index.html
docs/: .gitignore  _quarto.yml  how-to-build.md
docs/contributing/: index.qmd
docs/getting_started/: index.qmd  installation.qmd
docs/user_guide/: index.qmd  uwbm.qmd
getting_started/: index.html  installation.html
hydromt_uwbm/: __init__.py  config.py  uwbm.py
hydromt_uwbm/components/: config.py  forcing.py
hydromt_uwbm/data/: parameters_data.yml
hydromt_uwbm/data/UWBM/: neighbourhood_params.ini
hydromt_uwbm/workflows/: __init__.py  landuse.py
tests/: conftest.py  test_config.py  test_uwbm.py  test_uwbm_methods.py
tests/data/: Athens_Votris_region.geojson
tests/data/Athens_Votris_model/geoms/: closed_paved.geojson  da_closed_paved.geojson  da_open_paved.geojson  da_paved_roof.geojson  da_unpaved.geojson  da_water.geojson  landuse_map.geojson  lu_map.geojson  open_paved.geojson  osm_buildings.geojson  osm_railways.geojson  paved_roof.geojson  region.geojson  unpaved.geojson  water.geojson
tests/data/Athens_Votris_model/input/: Forcing_Athens_Votris_0y_1h.csv  neighbourhood_params.ini
tests/data/Athens_Votris_model/input/config/: ep_neighbourhood_Athens_Votris.ini
tests/data/Athens_Votris_model/landuse/: landuse_table.csv
tests/data/Athens_Votris_model/output/config/: neighbourhood_params.ini
tests/data/Athens_Votris_model/output/forcing/: Forcing_Athens_Votris_0y_1h.csv
tests/data/Athens_Votris_model/output/landuse/: landuse_map.geojson  osm_roads.geojson  osm_waterways.geojson
tests/data/landuse/: gis_osm_buildings_a_free_1_SMALL.geojson  gis_osm_railways_free_1_SMALL.geojson  gis_osm_roads_free_1_SMALL.geojson  gis_osm_water_a_free_1_SMALL.geojson  gis_osm_waterways_free_1_SMALL.geojson  local_data_catalog.yml
user_guide/: index.html  uwbm.html
