[build-system]
requires = ["flit_core >=3.4.0,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "hydromt_uwbm"
dependencies = [
    "hydromt>=0.10,<1.0",   # HydroMT core
    "numpy",                # numerical computing
    "pandas",               # data handling
    "geopandas",            # spatial data handling
    "tomli_w",              # writing toml files
]
license = "MIT" # https://peps.python.org/pep-0639/
license-files = ["LICENSE"]
version = "0.1.0"
description = "A HydroMT plugin for the Urban Water Balance Model"

requires-python = ">=3.10,<3.13"
classifiers = [
    # https://pypi.python.org/pypi?%3Aaction=list_classifiers
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Hydrology",
    "Programming Language :: Python :: 3",
]

[project.optional-dependencies]
# here you can add dependency groups like this:
# group = [dep1, dep2,...]
doc = [
    "quartodoc",        # documentation generation
]
dev = [
    "ruff",             # code linting
    "pre-commit",       # pre-commit hooks
]
test = [
    "pytest",           # testing framework
    "pytest-cov",       # pytest plugin for coverage reports
]

full = ["hydromt_uwbm[doc,dev,test]"]

[project.urls]
Documentation = "https://daanrooze.github.io/hydromt_uwbm"
Source = "https://github.com/daanrooze/hydromt_uwbm"

[project.entry-points."hydromt.models"]
uwbm = "hydromt_uwbm.uwbm:UWBM"

[tool.ruff]
line-length = 88
fix = true

[tool.ruff.lint]
# enable pydocstyle (E), pyflake (F) and isort (I), pytest-style (PT), and docstring (D) checks
select = ["E", "F", "I", "PT"] #, "D"]
ignore = ["D211", "D213", "E741", "D105", "E712", "E501"]
fixable = ["E", "F", "I", "PT"]
exclude = ["docs"]
pydocstyle = { convention = "numpy" }

[tool.flit.sdist]
include = ["hydromt_uwbm"]
exclude = ["docs", "examples", "tests", ".github"]

[tool.mypy]
packages = [
"hydromt_uwbm"
]
exclude = [
    "docs",
]
python_version = "3.11"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_equality = true
strict_concatenate = true
check_untyped_defs = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
